k8s/deployment-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 8080
      targetPort: 8080
